--- a/update_employee_dialog/pubspec.yaml
+++ b/update_employee_dialog/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   # persist locally data
   shared_preferences: ^2.0.5
 
+  # pick image
+  image_picker: ^0.7.4
+
+  # store image
+  path_provider: ^2.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
