--- a/basic_flutter/pubspec.yaml
+++ b/basic_flutter/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # cupertino_icons: ^1.0.2
 
   # switch animation between light and dark theme
   animated_theme_switcher: ^2.0.1-nullsafety.0
 
   # persist locally data
-  shared_preferences: ^2.0.5
+  shared_preferences: ^2.0.7
 
   # pick image
   image_picker: ^0.7.4
@@ -70,10 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/employee1.jpg
-    - assets/employee2.jpg
-    - assets/employee3.jpg
+  # assets:
+  #   - assets/employee1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
