--- a/basic_flutter/.vscode/launch.json
+++ b/basic_flutter/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "basic_flutter",
             "request": "launch",
-            "type": "dart",
+            "type": "dart"
         }
     ]
 }
