--- a/basic_flutter/pubspec.yaml
+++ b/basic_flutter/pubspec.yaml
@@ -1,4 +1,4 @@
-name: basic_flutter
+name: employee
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.4-116.0.dev <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,27 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^8.0.1
-  flutter_bloc: ^8.0.0  
-  cached_network_image: ^3.1.0
-  flutter_slidable: ^0.6.0
-  flutter_svg: ^0.22.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  # cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2
 
-  # switch animation between light and dark theme
   animated_theme_switcher: ^2.0.1-nullsafety.0
-
-  # persist locally data
-  shared_preferences: ^2.0.7
-
-  # pick image
-  image_picker: ^0.7.4
-
-  # store image
-  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/employee1.jpg
+  assets:
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
