--- a/basic_flutter/pubspec.yaml
+++ b/basic_flutter/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.3.3
   http: ^0.13.4
+  json_annotation: ^4.4.0
+  dio: ^4.0.4
+  pretty_dio_logger: ^1.1.1
+  retrofit: ^3.0.1
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
