--- a/basic_flutter/pubspec.yaml
+++ b/basic_flutter/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  multi_select_flutter: ^4.1.2
   bloc: ^7.2.1
   cupertino_icons: ^1.0.2
   flutter:
